--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <!-- --- Variables -->
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>
-      Welcome to Middleman
+      Armstrong & Gunnarsson Galleries, Events and Works
     </title>
     <!-- site info, about -->
     <meta content='Armstrong &amp; Gunnarsson Galleries, Events and Works' name='description'>
     <meta content='Armstrong &amp; Gunnarsson' property='og:site_name'>
     <meta content='website' property='og:type'>
-    <meta content='Welcome to Middleman' property='og:title'>
+    <meta content='Armstrong &amp; Gunnarsson Galleries, Events and Works' property='og:title'>
     <meta content='Armstrong &amp; Gunnarsson Galleries, Events and Works' property='og:description'>
     <meta content='http://armstrongandgunnarsson.com' property='og:url:'>
     <meta content='summary' name='twitter:card'>
-    <meta content='Welcome to Middleman' name='twitter:title'>
+    <meta content='Armstrong &amp; Gunnarsson Galleries, Events and Works' name='twitter:title'>
     <meta content='Armstrong &amp; Gunnarsson Galleries, Events and Works' name='twitter:description'>
     <meta content='http://armstrongandgunnarsson.com' name='twitter:url'>
     <script type='application/ld+json'>
@@ -31,20 +31,62 @@
       }
     </script>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-    <link href="stylesheets/site-1445192e.css" rel="stylesheet" />
+    <link href="stylesheets/site-579dde5b.css" rel="stylesheet" />
     <script src="javascripts/all-4abf6d7e.js"></script>
     <script src="javascripts/ga.js"></script>
   </head>
   <body class='index'>
-    <div class='welcome'>
-      <h1>Armstrong & Gunnarsson</h1>
-      <p>
-        Please bear with us while our website is being built.
-      </p>
-      <p>
-        <a target="_blank" class="icon mail" href="mailto:info@armstrongandgunnarsson.com">Contact us via Mail</a>
-        <a target="_blank" class="icon instagram" href="https://instagram.com/armstrong_gunnarsson">Visit us on Instagram</a>
-      </p>
-    </div>
+    <header class='welcome'>
+      <div class='container container-header'>
+        <h1>Armstrong & Gunnarsson</h1>
+      </div>
+    </header>
+    <section>
+      <div class='container'>
+        <div class='events'>
+          <div class='image'>
+            <img src="images/tat-9f9533a5.jpg" />
+          </div>
+          <div class='text'>
+            <h3>The Artist Table</h3>
+            <p>
+              The next event
+              The Artist Table
+              will be an immersive experience which explores the boundaries and experiential qualities of food and art.
+              Salon owner and head chef Nicholas Balfe will be working along side artists Kirsty Armstrong, Kiera Bennet, Archie Franks, Jeanette Gunnarsson and Caroline Jane Harris.
+              A select number of guests attending the ticketed event will be invited to engage with the artworks from a truly unique perspective.
+              The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
+              The event will then be followed by an open group show featuring further works from the artists involved.
+            </p>
+            <p>
+              Tickets will go on sale shortly.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class='container container-footer'>
+        <div class='about'>
+          <h2>About</h2>
+          <p>
+            Armstrong & Gunnarsson is an artist collaborative founded by Kirsty Armstrong and Jeanette Gunnarsson.
+          </p>
+        </div>
+        <div class='work'>
+          <h2>Work</h2>
+          <p>
+            Their creative ventures include group and solo exhibitions featuring the works of up and coming London artists.
+          </p>
+        </div>
+        <div class='social'>
+          <h2>Contact</h2>
+          <p>
+            <a target="_blank" class="icon mail" href="mailto:info@armstrongandgunnarsson.com">Contact us via Mail</a>
+            <a target="_blank" class="icon instagram" href="https://instagram.com/armstrong_gunnarsson">Visit us on Instagram</a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
