--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
     </script>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-    <link href="stylesheets/site-579dde5b.css" rel="stylesheet" />
+    <link href="stylesheets/site-6646d836.css" rel="stylesheet" />
     <script src="javascripts/all-4abf6d7e.js"></script>
     <script src="javascripts/ga.js"></script>
   </head>
@@ -45,12 +45,11 @@
       <div class='container'>
         <div class='events'>
           <div class='image'>
-            <img src="images/tat-9f9533a5.jpg" />
+            <img src="images/the-artist-table-ba48c813.png" />
           </div>
           <div class='text'>
-            <h3>The Artist Table</h3>
+            <h3>Upcoming event: The Artist Table</h3>
             <p>
-              The next event
               The Artist Table
               will be an immersive experience which explores the boundaries and experiential qualities of food and art.
               Salon owner and head chef Nicholas Balfe will be working along side artists Kirsty Armstrong, Kiera Bennet, Archie Franks, Jeanette Gunnarsson and Caroline Jane Harris.
@@ -58,8 +57,9 @@
               The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
               The event will then be followed by an open group show featuring further works from the artists involved.
             </p>
-            <p>
-              Tickets will go on sale shortly.
+            <p class='tickets'>
+              <a class='tickets' href='https://billetto.co.uk/en/events/the-artist-table'>Buy Tickets Online</a>
+              <span class='tickets'>(Sales start on Tuesday, 12. April 9:00am)</span>
             </p>
           </div>
         </div>
