--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       }
     </script>
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
-    <link href="stylesheets/site-6646d836.css" rel="stylesheet" />
+    <link href="stylesheets/site-6fe7814f.css" rel="stylesheet" />
     <script src="javascripts/all-4abf6d7e.js"></script>
     <script src="javascripts/ga.js"></script>
   </head>
@@ -48,7 +48,7 @@
             <img src="images/the-artist-table-ba48c813.png" />
           </div>
           <div class='text'>
-            <h3>Upcoming event: The Artist Table</h3>
+            <h3>Past event: The Artist Table</h3>
             <p>
               The Artist Table
               will be an immersive experience which explores the boundaries and experiential qualities of food and art.
@@ -56,9 +56,6 @@
               A select number of guests attending the ticketed event will be invited to engage with the artworks from a truly unique perspective.
               The Artist Table will provide a platform for the artists to discuss their work, which will be paired with a four course menu, designed by Nicholas Balfe.
               The event will then be followed by an open group show featuring further works from the artists involved.
-            </p>
-            <p class='tickets'>
-              <a class='tickets' href='https://billetto.co.uk/en/events/the-artist-table'>Buy Tickets Online</a>
             </p>
           </div>
         </div>
